# FastApi

./: .gitignore  dockerfile  main.py  pyproject.toml  requirements.txt
